# easyinstaller

./: Cargo.toml  LICENSE  README.md  main.rs
.rpm/: easyinstaller.spec
src/: language.rs  main.rs  window.rs
